@@ -84,4 +84,5 @@
 2020-09-02 databases full_catering.backup catering.backup and empty-catering.backup added selling_price, selling_contents 
            and item_unit in tables order_lines and sales
 2020-09-02 catering.py changed names item_price in selling_price and repaired bug blocking when no stock is present.
-2020-09-02 catering.py repaired counting totals by printing sales and by reentry counting by client changing.
+2020-09-03 catering.py barcodechecks normalised to EAN13 and EAN8
+2020-09-03 Documentation changed annual_consumption and tables sceenshots sales and order_lines adjusted.
